added 30 days of code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="/mini-wataru/index.html">Mini Wataru Adoptable</a></li>
         <li><a href="/peach-ring/index.html">The Peach Ring Webring</a></li>
+        <li><a href="/30-days-of-code/index.html"</a></li>
     </ul>
   </body>
 </html>
